<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="70dp"
        android:layout_height="63dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily=" "
            android:padding="5dp"
            android:text="@string/Movie_Title"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:paddingLeft="5dp"
                android:text="@string/Year"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.69"
                android:paddingLeft="5dp"
                android:text="@string/mpaa"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>